--- a/whereToEat/res/layout/recommend.xml
+++ b/whereToEat/res/layout/recommend.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Here is the recommend menu"
+        android:textColor="#FFFFFF"
         android:textSize="20dp" />
 
     <ImageView
@@ -23,7 +24,8 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="饭堂：二饭" 
+        android:text="饭堂：二饭"
+        android:textColor="#FFFFFF"
         android:layout_gravity="center"
         android:textSize="20dp" />
 
@@ -32,14 +34,43 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="菜名：自选"
+        android:textColor="#FFFFFF"
         android:layout_gravity="center"
         android:textSize="20dp" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:text="就是你了" />
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:background="#000000"
+	    android:gravity="right"
+	    android:orientation="horizontal" >
+
+		<Button
+		    android:id="@+id/button2"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="center_vertical|center_horizontal"
+		    android:text="返回"
+		    android:textColor="#FFFFFF" />
+
+"
+    	
+    	<Button
+    	    android:id="@+id/button3"
+    	    android:layout_width="wrap_content"
+    	    android:layout_height="wrap_content"
+    	    android:layout_gravity="center_vertical|center_horizontal"
+    	    android:text="就是你了"
+    	    android:textColor="#FFFFFF" />
+
+    	<Button
+    	    android:id="@+id/button4"
+    	    android:layout_width="wrap_content"
+    	    android:layout_height="wrap_content"
+    	    android:layout_gravity="center_vertical|center_horizontal"
+    	    android:text="换一个"
+    	    android:textColor="#FFFFFF" />
+
+    </LinearLayout>
 
 </LinearLayout>
