--- a/whereToEat/res/layout/login.xml
+++ b/whereToEat/res/layout/login.xml
@@ -82,12 +82,28 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button0"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:text="登录"
-        android:textColor="#FFFFFF" />
+        android:gravity="right" >
+
+        <Button
+            android:id="@+id/button00"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="注册"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="登录"
+            android:textColor="#FFFFFF" />
+
+    </LinearLayout>
 
 </LinearLayout>
